--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,8 +3,13 @@ en:
     name: "FirstPDP"
     actions:
       create: "Create"
-      index: "Articles"
-      new_article: "New Article"
+      edit: "Edit"
+      show: "Show"
+      update: "Update"
     articles:
+      index: "Articles"
+      new_title: "New Article"
+      edit_title: "Edit Article"
       author_prefix: "created by "
+      show: "Article"
     home: "Home"
