--- a/config/locales/flash.en.yml
+++ b/config/locales/flash.en.yml
@@ -19,3 +19,7 @@ en:
       destroy:
         notice: '%{resource_name} was successfully destroyed.'
         alert: '%{resource_name} could not be destroyed.'
+    contacts:
+      create:
+        notice: '%{resource_name} was successfully sent.'
+        alert: '%{resource_name} could not be sent.'
