--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,6 +7,7 @@ en:
       show: "Show"
       update: "Update"
       send: "Send"
+      remove: "Remove"
     articles:
       index: "Articles"
       new_title: "New Article"
